--- a/mvc/biblioteca-mvc/views/css/main.css
+++ b/mvc/biblioteca-mvc/views/css/main.css
@@ -59,10 +59,18 @@ body, html{
 	font-family: 'RobotoCondensedLight'
 }
 .breadcrumb-tabs{
-	margin-bottom: 15px; 
-	background-color: transparent; 
+	margin-bottom: 15px;
+	background-color: transparent;
 	border-bottom: 2px solid #F7F7F7;
 	padding: 0;
+}
+.container-404{
+ background-image: url(../assets/img/sideBar.png);
+ color: #fff;
+ height: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
 }
 /*============ LogIn*/
 .login-container{
@@ -178,7 +186,7 @@ body, html{
 }
 .dashboard-sideBar-Menu > li > a > i.zmdi-caret-down{
 	line-height: 50px;
-	transition: all .3s ease-in-out; 
+	transition: all .3s ease-in-out;
 }
 .dashboard-sideBar-Menu > li > a{
 	padding: 0 15px;
